--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 
@@ -137,55 +138,142 @@
       }
     }
   }
-  &-title{
+
+  &-title {
     color: $title;
     @extend %roboto-500;
     margin-bottom: 40px;
     font-size: 22px;
     line-height: 1;
   }
-  &-link{
+
+  &-link {
     margin-bottom: 14px;
     display: block;
   }
-  &-text{
+
+  &-text {
     margin-bottom: 25px;
   }
-  &-form-input{
+
+  &-form-input {
     background-color: #fff;
     max-width: 320px;
     width: 100%;
     border: none;
     padding: 15px;
-    &::placeholder{
+
+    &::placeholder {
       color: $default;
       font-size: 16px;
     }
+
     box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
   }
-  &-form-btn{
+
+  &-form-btn {
+    @extend %btn;
     border: none;
-    background-color: $accent;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 12px 26px;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
     cursor: pointer;
   }
 }
-.footer__bottom{
+
+.footer__bottom {
   height: 75px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 12px;
-  &-accept-img{
-  display: inline;
-  margin-left: 25px;
-  vertical-align: middle;
- }
+
+  &-accept-img {
+    display: inline;
+    margin-left: 25px;
+    vertical-align: middle;
+  }
 }
 
+.top__slider {
+  background-image: url(../images/top-slider-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: $bg;
+  padding: 65px 0 45px;
+
+  &-container {
+    max-width: 1560px;
+  }
+
+  &-content {
+    padding-left: 175px;
+    padding-top: 125px;
+  }
+
+  &-item {
+    display: flex !important;
+    justify-content: space-between;
+  }
+
+  &-title {
+    max-width: 670px;
+    font-size: 58px;
+    line-height: 68px;
+    color: $title;
+    @extend %roboto-700;
+    margin-bottom: 35px;
+  }
+
+  &-text {
+    margin-bottom: 55px;
+    max-width: 470px;
+  }
+
+  &-link {
+    @extend %btn;
+    padding: 14px 36px;
+  }
+
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+    margin-top: -70px;
+    li {
+      padding: 0 5px;
+      line-height: 0;
+      button {
+        padding: 0;
+        font-size: 0;
+        background-color: transparent;
+        border-radius: 50%;
+        width: 26px;
+        height: 26px;
+        border: 1px solid transparent;
+        position: relative;
+
+        &::before {
+          content: '';
+          position: absolute;
+          width: 6px;
+          height: 6px;
+          border-radius: 50%;
+          background-color: $default;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      &.slick-active {
+        button {
+          border-color: $accent;
+
+          &::before {
+            background-color: $accent;
+          }
+        }
+      }
+    }
+  }
+}
 
 
 
