--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -193,7 +193,7 @@
 }
 
 .top__slider {
-  background-image: url(../images/top-slider-bg.png);
+  background-image: url(../images/decor/top-slider-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-color: $bg;
@@ -236,9 +236,11 @@
     display: flex;
     justify-content: center;
     margin-top: -70px;
+
     li {
       padding: 0 5px;
       line-height: 0;
+
       button {
         padding: 0;
         font-size: 0;
@@ -275,6 +277,133 @@
   }
 }
 
+.categories-info {
+  padding: 120px 0;
+  background-image: url(../images/decor/categories_left-bg.png);
+  background-repeat: no-repeat;
+  background-position: center left;
 
+  &-inner {
+    background-image: url(../images/decor/catecories_right-bg.png);
+    background-repeat: no-repeat;
+    background-position: center right;
+  }
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+  position: relative;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+  }
+
+  &::before {
+    background-image: url(../images/decor/info_before-bg.svg);
+    top: -40px;
+    left: -45px;
+    width: 120px;
+    height: 121px;
+  }
+
+  &::after {
+    background-image: url(../images/decor/info_after-bg.svg);
+    bottom: -23px;
+    right: -23px;
+    width: 65px;
+    height: 52px;
+  }
+
+  &__item {
+    padding: 60px 30px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+    width: 370px;
+    background-color: #fff;
+  }
+
+  &__item-title {
+    margin: 35px 0 10px;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+  }
+}
+
+.categories {
+  &__items {
+    display: grid;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+
+  &__item {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 35px 0 0 40px;
+
+    &:nth-child(1) {
+      grid-row: span 2;
+
+      .categories__item-subtitle,
+      .categories__item-link:hover {
+        color: #5800e4;
+      }
+    }
+
+    &:nth-child(2) {
+      grid-column: span 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 0;
+
+      .categories__item-subtitle,
+      .categories__item-link:hover {
+        color: $accent;
+      }
+    }
+
+    &:nth-child(3) {
+
+      .categories__item-subtitle,
+      .categories__item-link:hover {
+        color: #ffb534;
+      }
+    }
+
+    &:nth-child(4) {
+
+      .categories__item-subtitle,
+      .categories__item-link:hover {
+        color: #34c3ff;
+      }
+    }
+  }
+
+  &__item-subtitle {
+    margin-bottom: 5px;
+  }
+
+  &__item-title {
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 16px;
+  }
+
+  .__item-link {
+    text-transform: uppercase;
+    color: $title;
+    @extend %roboto-400;
+    transition: all .3s;
+  }
+}
 
 @import 'media';
