--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -340,7 +340,8 @@
     min-height: 635px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 30px;
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
   }
 
   &__item {
@@ -403,6 +404,54 @@
     color: $title;
     @extend %roboto-400;
     transition: all .3s;
+  }
+}
+
+.video__fachion {
+  background-color: $bg;
+  background-image: url(../images/decor/pattern.svg);
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding: 125px 0;
+
+  &-inner {
+    display: flex;
+  }
+
+  &-popup {
+    margin-right: 60px;
+    max-width: 530px;
+    width: 100%;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  &-content {
+    max-width: 570px;
+  }
+
+  &-subtitle {
+    padding-top: 75px;
+    font-size: 22px;
+    color: $accent;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+  }
+
+  &-title {
+    text-align: left;
+  }
+  &-text{
+    margin-bottom: 55px;
+  }
+  &-link{
+    @extend%btn;
   }
 }
 
