added blog section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -607,11 +607,13 @@
     margin-bottom: 10px;
     font-size: 22px;
   }
-  &__clock{
+
+  &__clock {
     display: flex;
     justify-content: space-between;
     margin-top: 55px;
-    &-item{
+
+    &-item {
       background-color: #fff;
       width: 120px;
       height: 120px;
@@ -619,8 +621,9 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      
-      span{
+      box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+
+      span {
         font-size: 45px;
         @extend %roboto-700;
         margin: 12px 0 7px;
@@ -628,7 +631,7 @@
       }
     }
   }
-  
+
 
   &__link {
     text-transform: uppercase;
@@ -639,14 +642,124 @@
     margin-top: 55px;
   }
 }
-.partners{
+
+.partners {
   padding-top: 75px;
-  &__list{
+
+  &__list {
     height: 170px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
+
+.blog {
+  padding: 50px 0 160px;
+  background-image: url(../images/blog-bg.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      right: -20px;
+      top: -25px;
+      z-index: -1;
+      width: 126px;
+      height: 53px;
+      background-image: url(../images/decor/blog-decor.svg);
+    }
+  }
+
+  &__item {
+    max-width: 370px;
+    border: 1px solid #ececec;
+    &:hover{
+      box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+      border: none;
+      .blog__item-link{
+        color: $accent;
+        &::after{
+          background-image: url(../images/icons/arrow-accent.svg);
+        }
+      }
+    }
+  }
+    
+  &__item-imglink {
+    display: block;
+
+    img {
+      height: 280px;
+      object-fit: cover;
+    }
+  }
+
+  &__item-box {
+    padding: 30px 40px;
+  }
+
+  &__item-info {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__item-autor,
+  &__item-dete {
+    padding-left: 30px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+
+  &__item-autor::before {
+    background-image: url(../images/icons/user-gray.svg);
+  }
+
+  &__item-dete::before {
+    background-image: url(../images/icons/time.svg);
+  }
+
+  &__item-titlelink {
+    @extend %roboto-400;
+    font-size: 22px;
+    color: $title;
+  }
+
+  &__item-link {
+    position: relative;
+
+  }
+
+  &__item-title {
+    margin: 20px 0 20px;
+  }
+
+  &__item-link::after {
+    content: '';
+    width: 10px;
+    height: 8px;
+    background-image: url(../images/icons/arrow.svg);
+    position: absolute;
+    top: 8px;
+    right: -14px;
+  }
+}
+
+
+
+
 
 @import 'media';
