--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,7 +28,9 @@ a {
   line-height: 26px;
   @extend %quicksand-500;
 }
-
+.header--404-page{
+  background-color: $bg;
+}
 .title {
   text-align: center;
   @extend %roboto-700;
