--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -191,8 +191,9 @@
     vertical-align: middle;
   }
 }
-.top{
-  &__container{
+
+.top {
+  &__container {
     max-width: 1700px;
     margin: 0 auto;
     background-repeat: no-repeat;
@@ -675,7 +676,8 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    &::after{
+
+    &::after {
       content: '';
       position: absolute;
       right: -20px;
@@ -690,18 +692,21 @@
   &__item {
     max-width: 370px;
     border: 1px solid #ececec;
-    &:hover{
+
+    &:hover {
       box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
       border: none;
-      .blog__item-link{
+
+      .blog__item-link {
         color: $accent;
-        &::after{
+
+        &::after {
           background-image: url(../images/icons/arrow-accent.svg);
         }
       }
     }
   }
-    
+
   &__item-imglink {
     display: block;
 
@@ -768,29 +773,35 @@
     right: -14px;
   }
 }
-.modal{
+
+.modal {
   max-width: 570px;
   padding-top: 100px;
   margin: 0 auto 115px;
-  &__links{
+
+  &__links {
     text-align: center;
     margin-bottom: 40px;
   }
-  &__link{
+
+  &__link {
     color: #909090;
     font-size: 22px;
     @extend %roboto-400;
     text-transform: uppercase;
     margin: 0 30px;
   }
-  &__link--active{
+
+  &__link--active {
     color: $accent;
   }
-  &__label{
+
+  &__label {
     margin-bottom: 30px;
     display: block;
   }
-  &__input{
+
+  &__input {
     display: block;
     width: 100%;
     border: none;
@@ -799,7 +810,8 @@
     height: 60px;
     padding: 0 15px;
   }
-  &__btn{
+
+  &__btn {
     display: block;
     background-color: $title;
     text-transform: uppercase;
@@ -811,17 +823,54 @@
     width: 100%;
     cursor: pointer;
   }
-  &__error{
+
+  &__error {
     margin-top: 12px;
     color: $accent;
     display: inline-block;
   }
-  &__text{
+
+  &__text {
     margin-bottom: 25px;
   }
 }
 
+.page-404 {
 
+  padding: 110px 120px;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__title {
+    color: #28384f;
+    margin-bottom: 20px;
+    @extend %roboto-700;
+    font-size: 45px;
+  }
+
+  &__content {
+    min-width: 570px;
+    width: 100%;
+  }
+
+  &__text {
+    margin-bottom: 55px;
+    max-width: 470px;
+  }
+
+  &__link {
+    background-color: $accent;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 14px 35px;
+    @extend %roboto-400;
+    box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+  }
+}
 
 
 @import 'media';
